# coding-review

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  start.bat  start.sh
backend/: config.py  database.py  main.py
backend/engines/complexity/: types.py  (+4 more)
backend/models/: __init__.py  complexity_metric.py  duplication.py  issue.py  project.py  report.py  rule.py  scan_task.py  source_file.py  version.py
backend/reports/: html_renderer.py  markdown_renderer.py  pdf_renderer.py
backend/routers/: issues.py  projects.py  reports.py  rules.py  scans.py  visualization.py  websocket.py
backend/schemas/: __init__.py  issue.py  project.py  report.py  scan.py
backend/services/: refactor_service.py  report_service.py  scan_orchestrator.py  upload_service.py  visualization_service.py  ws_manager.py
backend/utils/: __init__.py  file_utils.py  logger.py
examples/: README.md
examples/sample_java_project/: Calculator.java  User.java
examples/sample_python_project/: data_processor.py  user_module.py  utils.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/css/: theme.css
frontend/js/: api.js  app.js  router.js  store.js
frontend/src/: main.ts  router.ts  style.css
go-backend/: go.mod  go.sum
scripts/: init_db.py  seed_rules.py  smoke_tree_sitter.py
tests/: conftest.py
tests/integration/: test_reports.py  test_scan_e2e.py
tests/unit/: test_complexity.py  test_config_scan.py  test_duplication.py  test_layer_violation.py  test_parser.py  test_refactor_service.py  test_rules.py  test_scoring.py  test_smells.py
(+107 files in other folders)
