[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codeguard-pro"
version = "1.0.0"
description = "CodeGuard Pro - 智能代码质量管理与规范检测平台"
authors = [
    {name = "CodeGuard Pro Contributors"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.scripts]
codeguard = "cli.codeguard:main"

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = ["-ra", "--strict-markers"]

[tool.coverage.run]
branch = true
source = ["backend"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
precision = 2
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
